--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.chaquo.python'
 }
 
 android {
@@ -7,12 +8,35 @@ android {
 
     defaultConfig {
         applicationId "com.example.vmail"
+        python{
+            pip{
+                install "numpy"
+                install "sklearn"
+                install "pickle-mixin"
+                install "scipy"
+                install "wave"
+                install "python_speech_features"
+            }
+        }
+        sourceSets {
+            main {
+                python {
+                    srcDirs = ["src/main/python"]
+                }
+            }
+        }
         minSdk 21
         targetSdk 32
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+        }
+        python {
+            buildPython "/Library/Frameworks/Python.framework/Versions/3.10/bin/python3"
+        }
     }
 
     buildTypes {
@@ -25,6 +49,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildToolsVersion '30.0.3'
+    ndkVersion '24.0.8215888'
 }
 
 dependencies {
