--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        google()
+        jcenter()
+        maven{ url "https://chaquo.com/maven" }
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath "com.chaquo.python:gradle:6.2.1"
+
+    }
+}
+
+
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
+    id 'com.chaquo.python' version '12.0.0' apply false
 }
 
 task clean(type: Delete) {
